@@ -138,6 +138,7 @@ change -> sfportscan: 'proto' ==> 'protos'
 change -> sfportscan: 'scan_type' ==> 'scan_types'
 change -> smtp: 'ports' ==> 'bindings'
 change -> ssh: 'server_ports' ==> 'bindings'
+change -> ssl: 'ports' ==> 'bindings'
 change -> stream5_global: 'max_active_responses' ==> 'max_responses'
 change -> stream5_global: 'max_icmp' ==> 'max_sessions'
 change -> stream5_global: 'max_ip' ==> 'max_sessions'
@@ -282,6 +283,7 @@ deleted -> ssh: 'enable_recognition'
 deleted -> ssh: 'enable_respoverflow'
 deleted -> ssh: 'enable_srvoverflow'
 deleted -> ssh: 'enable_ssh1crc32'
+deleted -> ssl: 'noinspect_encrypted'
 deleted -> stream5_global: 'disabled'
 deleted -> stream5_global: 'flush_on_alert'
 deleted -> stream5_global: 'no_midstream_drop_alerts'
